Bug#49501 Inefficient information_schema check (system collation) added check_length optimization for I_S_NAME comparison